--- a/theme/css/style.css
+++ b/theme/css/style.css
@@ -86,10 +86,17 @@ a, a:hover {
     height: auto;
 }
 
-.entry-content figcaption, .caption {
+.entry-content figcaption{
     font-size: small;
     margin-bottom: 2px;
 }
+
+.caption {
+    font-size: small;
+    margin-bottom: 2px;
+    align: center 
+}
+
 
 .floatright, .align-right {
     float: right;
